--- a/Melting_pot/_metadata.yml
+++ b/Melting_pot/_metadata.yml
@@ -1,10 +1,6 @@
 # Options specified here apply to all qmds in the posts folder
+date: today
+date-format: short
+# doi-title: put_your_DOI_here
 
 
-
-# prevents posts from re-rendering unless explicitly told to do so (for more, see https://quarto.org/docs/projects/code-execution.html#freeze)
-freeze: true
-
-
-# enable banner style title blocks (see https://quarto.org/docs/authoring/title-blocks.html)
-title-block-banner: true
