--- a/Melting_pot/_metadata.yml
+++ b/Melting_pot/_metadata.yml
@@ -1,6 +1,1 @@
-# Options specified here apply to all qmds in the posts folder
-date: today
-date-format: short
-# doi-title: put_your_DOI_here
-
-
+date: last-modified
